--- a/public/webmanifest.json
+++ b/public/webmanifest.json
@@ -30,8 +30,8 @@
     "download IG videos",
     "Instagram video saver"
   ],
-  "author": "riad-azz",
-  "copyright": "© 2023 riad-azz. All rights reserved.",
+  "author": "Durgesh Kumar",
+  "copyright": "© 2024 Durgesh Kumar. All rights reserved.",
   "rating": "General",
   "apple-mobile-web-app-title": "InstaDownloader",
   "apple-mobile-web-app-status-bar-style": "black-translucent"
